# django-project-lvl1

./: Makefile  README.md  manage.py  pyproject.toml  setup.cfg
generator/: __init__.py  models.py  tests.py  views.py
generator/static/css/: style.css
generator/templates/generator/: about.html  home.html  password.html
password_gnenerator/: asgi.py  settings.py  urls.py  wsgi.py
