[tool.poetry]
name = "django-project-lvl1"
version = "0.1.0"
description = ""
authors = ["Denis <Dysprosium92@ya.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
black = "^21.12b0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
